# protorpc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yaml  tests.yml
protorpc/: Cargo.toml  build.rs
protorpc-build/: Cargo.toml
protorpc-build/src/: client.rs  lib.rs  server.rs
protorpc/proto/: rpc.proto
protorpc/src/: client.rs  lib.rs  request.rs  response.rs  result.rs  routers.rs  server.rs  transport.rs
protorpc/src/client/: exclusive.rs  mod.rs  multiplex.rs  streaming.rs
tests/: Cargo.toml  build.rs
tests/proto/: grpc.examples.echo.proto
tests/src/: lib.rs
