[package]
name = "protorpc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
prost = "0.14"
lru = "0.16"
rand = "0.9"
nanoid = "0.4"
thiserror = "2"
tokio-stream = "0.1"
log = { version = "0.4", optional = true }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "sync",
    "time",
    "rt",
] }

[build-dependencies]
prost-build = { version = "0.14", features = ["cleanup-markdown"] }

[features]
log = ["dep:log"]
