[package]
name = "protorpc"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
futures-core = "0.3"
prost = "0.14"
lru = "0.16"
thiserror = "2"
tokio-stream = "0.1"
log = { version = "0.4", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasmtimer = "0.4.2"
wasm-bindgen-futures = "0.4.50"
crc32fast = { version = "1.5.0", default-features = false }
uuid = { version = "1.17.0", features = ["v4", "js"] }
fastrand = { version = "2.3", default-features = false, features = ["js"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "sync",
    "parking_lot",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fastrand = "2.3"
crc32fast = "1.5.0"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "sync",
    "time",
    "rt",
] }

[build-dependencies]
prost-build = { version = "0.14", features = ["cleanup-markdown"] }

[features]
log = ["dep:log"]
